Added analytics module and improved expense workflow